--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,3 +12,9 @@ repos:
     rev: v1.77.1
     hooks:
         - id: terraform_fmt
+        - id: terraform_validate
+        - id: terraform_docs
+          args:
+          - --hook-config=--path-to-file=README.md
+          - --hook-config=--add-to-existing-file=true
+          - --hook-config=--create-file-if-not-exist=true
